# real-life-minesweeper

./: .gitignore  README.md  treasure_search2.ttt
cv_bridge2/: CMakeLists.txt  package.xml
cv_bridge2/include/cv_bridge2/: cv_bridge.hpp  cv_mat_sensor_msgs_image_type_adapter.hpp  rgb_colors.hpp
cv_bridge2/python/cv_bridge2/: __init__.py  core.py
cv_bridge2/src/: cv_bridge.cpp  cv_mat_sensor_msgs_image_type_adapter.cpp  module.cpp  module.hpp  rgb_colors.cpp
cv_bridge2/test/: test_compression.cpp  test_dynamic_scaling.cpp  test_endian.cpp  test_rgb_colors.cpp  utest.cpp  utest2.cpp
minesweeper/: package.xml  setup.cfg  setup.py
minesweeper/launch/: start.launch.py  start_reg.launch.py
minesweeper/minesweeper/: metalDetector.py
minesweeper/shore_follower_drive_base/: package.xml  setup.cfg  shore_follower_drive.py
minesweeper/shore_follower_drive_base/shore_follower_drive_base/: shore_follower_drive.py
minesweeper/shore_follower_drive_base_reg/: shore_follower_drive_reg.py
minesweeper/shore_follower_observe/launch/: record.launch.py
minesweeper/shore_follower_observe/src/: shore_follower_observe.cpp
minesweeper/tensorflow_models_base/: package.xml  setup.cfg  setup.py
minesweeper/tensorflow_models_base/scripts/: train.sh
minesweeper/tensorflow_models_base/tensorflow_models_base/: model.py  parser.py  reader.py  sampler.py  train.py  venv_hack.py
shore_follower_drive_base/: setup.py
shore_follower_drive_base/launch/: start.launch.py
shore_follower_drive_base/scripts/: train_shore_follower.sh
shore_follower_observe/: CMakeLists.txt  package.xml
shore_follower_observe/launch/: record.launch.py
shore_follower_observe/src/: shore_follower_observe.cpp
shore_follower_regression/: CMakeLists.txt  package.xml
shore_follower_regression/launch/: record.launch.py
shore_follower_regression/src/: shore_follower_regression.cpp
tensorflow_models_base/scripts/: train.sh  train_regression.sh
tensorflow_models_base/tensorflow_models_base/: model.py  reader_regression.py  train_regression.py
vrep4_helpers/: CMakeLists.txt
vrep4_helpers/launch/: kinect_pc.launch.py  kinect_pc_min.launch.py
vrep4_helpers/src/: image_flip.cpp
vrep_ros_teleop/launch/: teleop_mux.launch.py
vrep_ros_teleop/vrep_ros_teleop/: teleop.py
vrep_vsv_driver/: package.xml  setup.cfg  setup.py
vrep_vsv_driver/launch/: vsv_geom_mux.launch.py  vsv_pc.launch.py  vsv_pc_min.launch.py
vrep_vsv_driver/vrep_vsv_driver/: arm_ik.py  teleop_geom.py  vsv_arm.py  vsv_arm_ik.py  vsv_driver.py  vsv_kinematics.py  vsv_odom.py
